--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
     "require": {
-        "joshcam/mysqli-database-class": "dev-master",
+        "joshcam/mysqli-database-class": "dev-master"
     }
 }
